<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/loading_layout"
        android:id="@+id/loading_screen" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_icon"
            android:adjustViewBounds="true"
            android:contentDescription="@string/group_image"
            android:maxHeight="80dp"
            android:maxWidth="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/group_description"
                android:textColor="@color/default_color"
                android:textSize="20sp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@color/accent">

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite"
            android:id="@+id/invite_button"
            android:textColor="@color/default_color"
            android:visibility="gone" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:id="@+id/decline_group_invite_button"
            android:textColor="@color/default_color"
            android:visibility="gone" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_color"
            android:text="@string/join_group"
            android:id="@+id/join_group_button"
            android:visibility="gone" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_color"
            android:text="@string/leave_group"
            android:id="@+id/leave_group_button"
            android:visibility="gone" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:textColor="@color/default_color"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:id="@+id/edit_button"
            android:visibility="gone" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_color"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="10dp"
            android:text="Members"
            android:textSize="27sp"
            android:id="@+id/group_members" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_group_edit_groupname"
        android:visibility="gone"
        android:hint="Group name"
        android:ems="20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/accent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_group_edit_description"
        android:visibility="gone"
        android:hint="Group description"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/accent"
        app:met_maxCharacters="50"
        android:ems="20" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/unban"
            android:id="@+id/unban_button"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_of_members"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>