<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.group7.healthtrac.fragments.EnterFoodFragment"
    android:paddingLeft="10dp"
    android:paddingTop="10dp">

    <com.gc.materialdesign.views.ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/food_name_edit"
                android:inputType="text"
                android:hint="@string/food_name"
                android:layout_marginRight="10dp"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/accent"
                android:ems="20" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:layout_marginRight="10dp"
                android:id="@+id/food_amount_edit"
                android:hint="@string/food_amount"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/accent"
                android:ems="20"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/food_unit"
                    android:textSize="18sp"
                    android:id="@+id/textView27"
                    android:layout_marginRight="140dp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_spinner"
                    android:entries="@array/food_units" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/food_date"
                    android:textSize="18sp"
                    android:id="@+id/textView28"
                    android:layout_marginRight="145dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/food_date"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginRight="143dp"
                    android:textSize="18sp"
                    android:text="@string/food_time"
                    android:id="@+id/textView29" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/food_time" />
            </LinearLayout>

            <com.gc.materialdesign.views.ButtonRectangle
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/enter_food"
                android:id="@+id/enter_food_enter"
                android:onClick="onCreateFood"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </com.gc.materialdesign.views.ScrollView>

</LinearLayout>
