<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.group7.healthtrac.CreateGoalActivity"
    android:id="@+id/create_goal_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/create_goal_tool_bar"
            layout="@layout/tool_bar" />

        <com.gc.materialdesign.views.ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/goal_timeframe_label"
                        android:id="@+id/textView14"
                        android:layout_marginRight="80dp" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/goal_timeframe"
                        android:prompt="@string/goal_timeframe_prompt"
                        android:entries="@array/goal_timeframes" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/goal_type_label"
                        android:id="@+id/textView15"
                        android:layout_marginRight="145dp" />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/goal_type"
                        android:prompt="@string/goal_type_prompt"
                        android:entries="@array/goal_types" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/goal_target_edit"
                        android:layout_marginRight="5dp"
                        android:hint="Target"
                        app:met_floatingLabel="normal"
                        app:met_primaryColor="@color/accent"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/goal_target_label"
                        android:layout_gravity="center_vertical"
                        android:text="@string/minutes_label" />
                </LinearLayout>

            </LinearLayout>

        </com.gc.materialdesign.views.ScrollView>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/goal_create_button"
            android:id="@+id/goal_create"
            android:onClick="onCreateGoal"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/create_goal_recycler_view"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/default_color"
        android:scrollbars="vertical" />

</android.support.v4.widget.DrawerLayout>